# duckstation

./: CMakeLists.txt
.github/workflows/: main.yml  windows-build.yml
